# bulk

./: Cargo.toml  README.md  justfile
crates/coordinator/: Cargo.toml
crates/coordinator/src/: lib.rs  main.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
