[package]
name = "bulk-node"
version.workspace = true
edition.workspace = true


[dependencies]
bulk-types = { path = "../types" }
tokio.workspace = true
postcard.workspace = true
lru.workspace = true
fastrand.workspace = true
serde_json = "1.0"
smallvec.workspace = true
bytes = "1.5"
alloy-primitives.workspace = true